import { ActivityIndicator, FlatList, View } from "react-native";

import { CharacterCard } from "@/components/character-card";
import { ContentPlaceholder } from "@/components/content-placeholder";
import { Header } from "@/components/header";
import { SearchInput } from "@/components/search-input";
import { SelectContent } from "@/components/select-content";
import { type CharacterFilter, fetchAllCharacters } from "@/lib/services/characters";
import { getNextPageParam, normalizePages } from "@/utils/infinite-query";
import { useInfiniteQuery } from "@tanstack/react-query";
import { useState } from "react";
import { useSafeAreaInsets } from "react-native-safe-area-context";
...
						]}
					/>
				</View>
			</View>
			<FlatList
				initialNumToRender={10}
				testID="character-list"
				contentContainerStyle={{ paddingHorizontal: 16 }}
				numColumns={2}
				data={normalizePages(data?.pages)}
				renderItem={({ item }) => <CharacterCard data={item} />}
				keyExtractor={(item) => String(item.id)}
				onEndReached={() => fetchNextPage()}
...
