...
					<Stack.Screen
						options={{
							title: "",
							headerRight(props) {
								return (
									<FavoriteItem
										testID="favorite-header-favorite"
										favorite={favorites.includes(id)}
										toggleFavorite={() => toggleFavorite(id)}
									/>
								);
							},
						}}
...
