import { ContentPlaceholder } from "@/components/content-placeholder";
import { EpisodeCard } from "@/components/episode-card";
import { Header } from "@/components/header";
import { SearchInput } from "@/components/search-input";
import { useFavorites } from "@/hooks/use-favorites";
import { type EpisodeFilter, fetchAllEpisodes } from "@/lib/services/episode";
import { getNextPageParam, normalizePages } from "@/utils/infinite-query";
import { useInfiniteQuery } from "@tanstack/react-query";
import { useState } from "react";
import { ActivityIndicator, FlatList, View } from "react-native";
...
				<SearchInput
					onSearch={(value) => setFilter({ name: value })}
					defaultValue={filter.name ?? ""}
				/>
			</View>
			<FlatList
				testID="episode-list"
				contentContainerStyle={{ paddingHorizontal: 16, paddingBottom: 16 }}
				data={normalizePages(episodes.data?.pages)}
				renderItem={({ item }) => (
					<EpisodeCard
						favorite={favorites.includes(`${item.id}`)}
						toggleFavorite={() => toggleFavorite(`${item.id}`)}
...
